[package]
name = "lsp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.19.0"
lsp-types = "0.94.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
anyhow = "1.0"
my_rust_lib = { path = "../my_rust_lib" } # ✅ Add this line
pyo3-build-config = "0.21"

[patch.crates-io]
tower-lsp = { git = "https://github.com/ebkalderon/tower-lsp.git", branch = "main" }

[build-dependencies]
pyo3-build-config = "0.21"
